--- a/suma.html
+++ b/suma.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/suma.css">
+    <link rel="stylesheet" href="suma.css">
     <title>Aprende a sumar!</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <button class="generar">Generar</button>
         </div>
     </div>
-    <script src="/js/suma.js"></script>
+    <script src="suma.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
